* Display XP stat bar value as relative to current level instead of total XP. (Leszek Cimała)
* Fix key bindings not working when switched to a non-US keyboard layout. (nwtour)
* Fix segfault when NPC filename is invalid.
* Fix inventory tooltips covering books when using no mouse.
* Fix navigation of dialog menu when using no mouse.
* Fix upgrading powers when using no mouse.

Game updates:

* Fixed an oversight that allowed easy farming of the Torture Chambers boss and loot chests.
* Made it so that potions and scrolls can not be stashed. This fixes an exploit where players could utilize a low level character to get these items for cheap.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* Brazilian Portuguese (pt_BR) update (Vinicius Rech)
* Catalan (ca) update (Marc Tormo i Bochaca)
* German (de) update (Fyrenic)
* Spanish (es) update (Agustin Ferrario)
* French (fr) update (syl_)
* Scottish Gaelic (gd) update (GunChleoc)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Andrey Kapitonov, Igor Paliychuk, nwtour)
* Ukranian (uk) update (Igor Paliychuk)
* Chinese (zh) update (dumaosen, neverwin)



Flare v1.09.01 (http://flarerpg.org/index.php/2018/12/12/flare-1-09-01/)

Engine fixes:

* Fixed assertion/crash when engaging in dialog.

Game updates:

* Fixed main weapon layer order when hero is facing east.

Translation updates:

* Ukranian (uk) update (Микола Франчук)



Flare v1.09 (http://flarerpg.org/index.php/2018/12/09/flare-1-09/)

Engine features:

* Redesigned mouse movement with better handling of non-melee attacks.
* New mouse movement options to swap the movement button and/or restrict the movement button to be movement-only.
* Loot tooltips can now be hidden when entities are near pieces of loot. The setting "hide_radius" has been added to engine/loot.txt to control this.
* Overhead markers are now displayed for entities that are obscured by tall tiles.