@@ -31,6 +31,7 @@ Engine fixes:
 * Fix inventory tooltips covering books when using no mouse.
 * Fix navigation of dialog menu when using no mouse.
 * Fix upgrading powers when using no mouse.
+* When using the sdl_hardware renderer on Windows, OpenGL will now be used instead of Direct3D. This fixes the loss of some textures when resizing the window.
 
 Game updates:
 
